--- a/HotelReservation/HotelReservationEngine/HotelReservationEngine.csproj
+++ b/HotelReservation/HotelReservationEngine/HotelReservationEngine.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\HtmlPages\Navbar.html" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.0" />
     <PackageReference Include="System.ServiceModel.Duplex" Version="4.4.0" />
