--- a/HotelReservation/HotelReservationEngine/HotelReservationEngine.csproj
+++ b/HotelReservation/HotelReservationEngine/HotelReservationEngine.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HotelEntities\HotelEntities.csproj" />
+    <ProjectReference Include="..\HotelReservation.Contract\HotelReservation.Contract.csproj" />
     <ProjectReference Include="..\TripEngine\TripEngine.csproj" />
   </ItemGroup>
 
