--- a/HotelReservation/TripEngine/TripEngine.csproj
+++ b/HotelReservation/TripEngine/TripEngine.csproj
@@ -24,6 +24,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HotelReservation.Logger\HotelReservation.Logger.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <WCFMetadata Include="Connected Services" />
   </ItemGroup>
 
