--- a/HotelReservation/HotelEntities/HotelEntities.csproj
+++ b/HotelReservation/HotelEntities/HotelEntities.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HotelReservation.Contract\HotelReservation.Contract.csproj" />
+  </ItemGroup>
+
 </Project>
