--- a/HotelReservation/HotelReservationEngine/HotelReservationEngine.csproj
+++ b/HotelReservation/HotelReservationEngine/HotelReservationEngine.csproj
@@ -5,13 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="wwwroot\ListingPage\**" />
-    <Content Remove="wwwroot\ListingPage\**" />
-    <EmbeddedResource Remove="wwwroot\ListingPage\**" />
-    <None Remove="wwwroot\ListingPage\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.0" />
     <PackageReference Include="System.ServiceModel.Duplex" Version="4.4.0" />
@@ -32,6 +25,10 @@
 
   <ItemGroup>
     <WCFMetadata Include="Connected Services" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
